--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,18 @@
 {
   "extends": "astro/tsconfigs/strict",
   "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  "exclude": ["dist"], 
+
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@modules": ["src/components/modules/index.ts"],  
+      "@ui/*": ["src/components/ui/*"],
+      "@styles": ["src/styles/index.css"],      
+      "@styles/*": ["src/styles/*"],      
+
+    }
+  }
+
+
 }
