--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.6"
+    "@astrojs/react": "^4.2.7",
+    "@astrojs/starlight": "^0.34.2",
+    "@heroicons/react": "^2.2.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "astro": "^5.7.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-pro-sidebar": "^1.1.0"
   }
 }
